removed old code, cleanup whitespace, cosmetic fixes css/html

--- a/static/style.scss
+++ b/static/style.scss
@@ -36,10 +36,11 @@ body {
     text-indent: 10px;
 }
 .Cargo{
-    color: gray;
-    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color: rgb(150, 150, 150);
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: left;
     text-indent: 30px;
+
 }
 
 .togglebtn{
@@ -70,3 +71,6 @@ body {
   .close:after {
     transform: rotate(-45deg);
   }
+.scutext{
+    font-size: x-small;
+}
